@@ -1,3 +1,11 @@
+Mon Dec  9 02:10:32 2013  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* lib/net/http/responses.rb:
+	  Add `HTTPIMUsed`, as it is also supported by rack/rails.
+	  RFC - http://tools.ietf.org/html/rfc3229
+	  by Vipul A M <vipulnsward@gmail.com>
+	  https://github.com/ruby/ruby/pull/447 fix GH-447
+
 Sun Dec  8 20:47:35 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* class.c (rb_get_kwargs): when values is non-null, remove
